--- a/WCSTrainer/appsettings.json
+++ b/WCSTrainer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WCSTrainerContext": "Server=(localdb)\\mssqllocaldb;Database=WCSTrainerContext-39808b7f-7257-46ac-9d37-0a071f082047;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WCSTrainerContext": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
