--- a/WCSTrainer/appsettings.json
+++ b/WCSTrainer/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WCSTrainerContext": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WCSTrainerContext": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "EmployeeContext": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
