Components, Scheduling, UI changes.

--- a/WCSTrainer/appsettings.json
+++ b/WCSTrainer/appsettings.json
@@ -7,9 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WCSTrainerContext": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "EmployeeContext": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "Trainer": "Server=(localdb)\\mssqllocaldb;Database=Trainer-ad42d1cf-6643-47ae-85ed-b4f4a6df6694;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "TrainerContext": "Server=(localdb)\\mssqllocaldb;Database=TrainerContext-29fd9baa-1fa6-48d7-a374-8943b28468b3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WCSTrainerContext": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
