--- a/WCSTrainer/WCSTrainer.csproj
+++ b/WCSTrainer/WCSTrainer.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\svelteapp\src\People.svelte" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\svelteapp\src\People.svelte" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" />
@@ -37,6 +45,7 @@
     <None Include="wwwroot\svelteApp\scripts\setupTypeScript.js" />
     <None Include="wwwroot\svelteApp\src\App.svelte" />
     <None Include="wwwroot\svelteApp\src\main.js" />
+    <None Include="wwwroot\svelteapp\src\People.svelte" />
   </ItemGroup>
 
 </Project>
