--- a/WCSTrainer/appsettings.json
+++ b/WCSTrainer/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "defaultConnection": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft.AspNetCore": "Warning"
+      }
+   },
+   "AllowedHosts": "*",
+   "ConnectionStrings": {
+      "defaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+   }
 }
