Initial Image Uploading

--- a/WCSTrainer/appsettings.json
+++ b/WCSTrainer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultConnection": "Server=IT-SQLSRVR\\TRAININGDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "defaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TrainingDB;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
