--- a/WCSTrainer/WCSTrainer.csproj
+++ b/WCSTrainer/WCSTrainer.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Folder Include="Migrations\" />
     <Folder Include="wwwroot\uploads\" />
+    <Folder Include="wwwroot\uploads\lessons\" />
   </ItemGroup>
 
 </Project>
